--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
   /* Display a point marker with pop-up text */
   L.marker([41.77, -72.69]).addTo(map) // EDIT marker coordinates
   .bindPopup("Insert pop-up text here"); // EDIT pop-up text message
+    
+     /* Display a point marker with pop-up text */
+  L.marker([31.77, -72.69]).addTo(map) // EDIT marker coordinates
+  .bindPopup("Insert pop-up text here"); // EDIT pop-up text message
 
   </script>
 </body>
